--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ version: '3.8'
 services:
   app:
     image: php:8.2-fpm
+    build:
+        context: .
+        dockerfile: docker/app/Dockerfile
     container_name: laravel_app
     working_dir: /var/www/html
     volumes:
